--- a/components/layout/Footer/Footer.module.scss
+++ b/components/layout/Footer/Footer.module.scss
@@ -2,6 +2,7 @@
 @use "../../../styles/mixins" as mix;
 
 .footerSection {
+    user-select: none;
     display: flex;
     flex-direction: column;
     position: relative;
