--- a/components/sections/HomePage/HeroSection.module.scss
+++ b/components/sections/HomePage/HeroSection.module.scss
@@ -2,6 +2,7 @@
 @use "../../../styles/mixins" as mix;
 
 .heroSection {
+  user-select: none;
   position: sticky;
   top: clamp(1.875rem, 1.4199rem + 1.9417vw, 3.75rem);
   display: flex;
