--- a/components/forms/ContactForm.module.scss
+++ b/components/forms/ContactForm.module.scss
@@ -8,7 +8,7 @@
   max-width: 600px;
   min-width: 350px;
   margin: 0 auto;
-  padding: clamp(1rem, 2vw, 2rem);
+  padding: 0 clamp(0.8rem, 2vw, 2rem) 0 clamp(1.5rem, 2vw, 2rem);
   border-radius: 12px;
 
   &__title {
