--- a/components/layout/Footer/Footer.module.scss
+++ b/components/layout/Footer/Footer.module.scss
@@ -62,12 +62,13 @@
         flex-wrap: wrap;
         gap: 10px;
         justify-content: space-between;
-        padding: 15px clamp(2rem, -0.9507rem + 9.3897vw, 9rem);
+        align-items: center;
+        padding: 5px clamp(2rem, -0.9507rem + 9.3897vw, 9rem);
         background: $background-linear-blue;
         color: #FFF;
-        font-size: 18px;
+        font-size: 14px;
         & p:first-child {
-            font-size: 22px;
+            font-size: 16px;
         }
         & a {
             color: #FFF;
