--- a/components/sections/HomePage/ContactSection.module.scss
+++ b/components/sections/HomePage/ContactSection.module.scss
@@ -24,6 +24,7 @@
     justify-content: center;
     margin: 0 auto;
     gap: 10px;
+    
       padding: clamp(1.875rem, 0.8131rem + 4.5307vw, 6.25rem) 0;
     }
    &__contactInfo,
@@ -32,6 +33,7 @@
     padding: 40px 0;
     min-width: 100%; 
     text-align: center;
+    font-size: clamp(1rem, 0.9393rem + 0.2589vw, 1.25rem);
     @media (min-width: 480px) {
       min-width: 375px;
     }
