--- a/app/(site)/admin/layout.module.scss
+++ b/app/(site)/admin/layout.module.scss
@@ -1,33 +1,130 @@
 @use "../../../styles/mixins" as mix;
 
 .adminLayout {
+  position: relative;
+  z-index: 1;
+
+  &__hamburger {
+    display: none;
+    position: fixed;
+    top: 0px;
+    right: 0px;
+    background: #1f2937;
+    color: #fff;
+    border: none;
+    padding: 0.5rem 1rem;
+    font-size: 1.5rem;
+    border-radius: 6px;
+    z-index: 1000;
+    cursor: pointer;
+
+    @media (max-width: 768px) {
+      display: block;
+    }
+  }
+
   &__sidemenu {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 90vh;
+    height: calc(100vh - clamp(1.875rem, 1.4199rem + 1.9417vw, 3.75rem));
     position: fixed;
-    top: 60px;
-  }
-  & nav {
-    padding-top: 20px;
+    top: clamp(1.875rem, 1.4199rem + 1.9417vw, 3.75rem);
+    width: 220px;
+    background: #1f2937;
+    padding: 1rem;
+    transition: transform 0.3s ease-in-out;
+    z-index: 999;
+
+    nav {
+      padding-top: 20px;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+
+    @media (max-width: 768px) {
+      transform: translateX(-100%);
+      &.open {
+        transform: translateX(0);
+      }
+      
+    }
     
   }
+
+  nav a,
+  &__logoutBtn {
+    text-align: center;
+    border: 1px solid rgba(255, 255, 255, 0.171);
+    border-radius: 15px;
+    padding: 10px;
+    background-color: transparent;
+    color: #ffffff93 !important;
+    width: 170px;
+    font-size: 20px;
+    cursor: pointer;
+
+    &:hover {
+      border: 1px solid rgba(255, 255, 255, 0.678);
+      color: #fff !important;
+    }
+  }
+
+  .sidemenuOverlay::before {
+    position: absolute;
+    inset: 0;
+    content: "";
+    background: rgba(0, 0, 0, 0.719);
+   z-index: 5;
+   @media (min-width: 768px) {
+    background: none;
+   }
+  }
+
+  &__main {
+    flex: 1;
+    margin-left: 220px;
+    
+    transition: margin-left 0.3s;
+
+    @media (max-width: 768px) {
+      margin-left: 0;
+    }
+  }
+  
 }
-.adminLayout nav a,
-.adminLayout__logoutBtn {
-    
-  text-align: center;
-  border: 1px solid rgba(255, 255, 255, 0.171);
-  border-radius: 15px;
-  padding: 10px;
-  background-color: transparent;
-  color: #ffffff93 !important;
-  width: 170px;
-  font-size: 20px;
-  &:hover {
-    border: 1px solid rgba(255, 255, 255, 0.678);
-    color: #FFF !important;
+.adminLayout__menuBtn {
+  position: absolute;
+    top: 530px; 
+    left: 192px;
+    transform: rotate(-90deg);
+    background-color: #1f2937;
+    transition: left 0.3s ease-in-out;
+    border-top: none;
+    height: 25px;
+    width: 80px;
+    clip-path: polygon(0 0, 100% 0, 85% 100%, 15% 100%);
+  border-radius: 0 0 20px 20px;
+  padding-top: 10px;
+  display: flex;
+  flex-direction: column;
+    gap: 4px;
+    border: none;
+    & span {
+    display: block;
+    background-color: #ffffffc5;
+    width: 40%;
+    height: 2px;
+    transform: translateX(23px);
+    border-radius: 2px;
   }
+    @media (min-width: 768px) {
+      display: none;
+    }
 }
 
+.activeLink {
+  border: 2px solid #FFF !important;
+  opacity: 0.5;
+}
