--- a/app/globals.scss
+++ b/app/globals.scss
@@ -22,6 +22,11 @@ main {
   flex-wrap: wrap;
 }
 
+.flex-center {
+  display: flex;
+  align-items: center;
+}
+
 .sr-only {
   position: absolute;
   width: 1px;
@@ -36,11 +41,11 @@ main {
 .hamburger-icon {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
-  height: clamp(2.5rem, 1.9583rem + 2.3112vw, 3.4375rem);
+  height: clamp(1.875rem, 1.4199rem + 1.9417vw, 3.75rem);
   width: 120px;
-  padding: clamp(0.9375rem, 0.5764rem + 1.5408vw, 1.5625rem) 8px 10px;
+  padding: clamp(0.9375rem, 0.5764rem + 1.5408vw, 1.5625rem) 10px 8px;
   clip-path: polygon(0 0, 100% 0, 85% 100%, 15% 100%);
   border-radius: 0 0 20px 20px;
   position: absolute;
