feat: add cookie consent management and reset option

--- a/styles/__animations.scss
+++ b/styles/__animations.scss
@@ -28,6 +28,25 @@
   }
 }
 
+@keyframes slideUp2 {
+  0% {
+    transform: translateY(150px);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+@keyframes slideDown {
+  0% {
+    transform: translateY(0);
+  }
+
+  100% {
+    transform: translateY(150px);
+  }
+}
+
 @keyframes fadeInLogo {
   0%,
   40% {
