--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,4 +1,6 @@
 @use "../styles/_animations" as *;
+@use "../styles/variables" as *;
+@use "../styles/mixins" as mix;
 
 * {
     margin: 0;
@@ -9,7 +11,6 @@
 html, body {
     font-family: var(--font-kanit);
     overflow-x: hidden;
-    scroll-behavior: smooth;
 }
 
 main { 
@@ -76,4 +77,12 @@ a {
 
 .indent {
   padding-left: 25px;
+}
+
+.endl {
+  width: 100%;
+  height: 100px;
+  background: $background-linear-blue;
+  margin-top: 80px;
+  transform: skew(-60deg) rotate(180deg);
 }
