--- a/components/sections/HomePage/ContactSection.module.scss
+++ b/components/sections/HomePage/ContactSection.module.scss
@@ -40,11 +40,19 @@
   }
   &__mapIframe {
     position: absolute;
+    display: flex;
+    flex-direction: column;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     border: 0;
+    & a {
+      color: #000092;
+      &:hover {
+      text-decoration: underline;
+      }
+    }
   }
   &__formWrapper {
     display: flex;
