--- a/components/sections/HomePage/ContactSection.module.scss
+++ b/components/sections/HomePage/ContactSection.module.scss
@@ -60,4 +60,13 @@
   
     flex: 2;
   }
+  & a {
+    color: #fff;            
+  text-decoration: none;    
+  transition: all 0.2s ease;
+
+  &:hover {
+    text-decoration: underline; 
+  }
+  }
 }
