--- a/app/(site)/admin/aktuell/page.module.scss
+++ b/app/(site)/admin/aktuell/page.module.scss
@@ -23,8 +23,8 @@
   margin-bottom: 1rem;
   padding: 0.75rem 1rem;
   border-radius: 0.5rem;
-  background-color: #dbeafe; // svetlo plava
-  color: #1e40af; // tamno plava
+  background-color: #dbeafe; 
+  color: #1e40af;
   font-weight: 500;
 }
 
@@ -179,20 +179,11 @@
   }
 
   .topButton {
-    background-color: #f59e0b;
-    color: white;
-
-    &:hover {
-      background-color: #d97706;
-    }
+    @include btnPrimaryGreenTransparent;
+    text-wrap: nowrap;
   }
 
   .deleteButton {
-    background-color: #ef4444;
-    color: white;
-
-    &:hover {
-      background-color: #b91c1c;
-    }
+    @include btnPrimaryRedTransparent;
   }
 }
