--- a/app/(site)/aktuell/[slug]/page.module.scss
+++ b/app/(site)/aktuell/[slug]/page.module.scss
@@ -2,12 +2,17 @@
 
 .container {
   position: relative;
-  padding: 80px clamp(0.625rem, -5.2913rem + 25.2427vw, 25rem);
+  padding: 0px clamp(0rem, -6.875rem + 22.9167vw, 20.625rem);
   font-family: 'Inter', sans-serif;
-  color: #fff; // tekst kontrastan na gradient
+  color: #fff;
   display: flex;
   flex-direction: column;
   gap: 2rem;
+
+   &__wrapper {
+    background: #ffffff38;
+    padding: clamp(3.75rem, 2.9167rem + 2.7778vw, 6.25rem) clamp(1.25rem, 0.7949rem + 1.9417vw, 3.125rem);
+  }
 
   &::before {
     content: '';
@@ -17,7 +22,7 @@
     width: 100%;
     height: 100%;
     z-index: -1;
-    background: $background-linear-gray;
+    background: $background-header;
   }
 }
 
@@ -25,7 +30,7 @@
   font-size: clamp(1.3rem, 1.0087rem + 1.2427vw, 2.5rem);
   font-weight: 800;
   line-height: 1.2;
-  color: #fff; // kontrast za gradient
+  color: #fff; 
   text-transform: uppercase;
   letter-spacing: 1px;
   padding: 30px;
@@ -48,21 +53,27 @@
 }
 
 .excerpt {
+  margin-top: 50px;
+  margin-left: 20px;
   font-size: 1.125rem;
   line-height: 1.8;
-  color: #f0f0f0; // svetliji tekst na gradient
+  color: #f0f0f0; 
+  @media screen and (max-width: 480px) {
+    margin-top: 20px;
+  }
 }
 
 .content {
+  margin-top: 20px;
   font-size: 1rem;
   line-height: 1.7;
-  color: #eee; // kontrast
+  color: #eee; 
   display: flex;
   flex-direction: column;
   gap: 1rem;
 
   a {
-    color: #ffd966; // naglašene linkove za dobar kontrast
+    color: #ffd966;
     text-decoration: underline;
     transition: color 0.2s ease;
 
