--- a/app/(site)/aktuell/page.module.scss
+++ b/app/(site)/aktuell/page.module.scss
@@ -2,13 +2,18 @@
 
 .container {
   position: relative;
-  padding: 80px clamp(0.625rem, -5.2913rem + 25.2427vw, 25rem);
+  padding: 0px clamp(0rem, -6.875rem + 22.9167vw, 20.625rem);
   font-family: 'Inter', sans-serif;
-  color: #fff; // tekst kontrastan na gradient
+  color: #fff; 
   display: flex;
   flex-direction: column;
   gap: 2rem;
   min-height: 100vh;
+
+  &__wrapper {
+    background: #ffffff38;
+    padding: clamp(3.75rem, 2.9167rem + 2.7778vw, 6.25rem) clamp(1.25rem, 0.7949rem + 1.9417vw, 3.125rem);
+  }
 
   &::before {
     content: '';
@@ -17,10 +22,10 @@
     left: 0;
     width: 100%;
     height: 100%;
-    
     z-index: -1;
-    background: $background-linear-gray;
+    background: $background-header;
   }
+  
 }
 
 .hero {
