--- a/components/sections/HomePage/HandwerkOnlineSection.module.scss
+++ b/components/sections/HomePage/HandwerkOnlineSection.module.scss
@@ -14,6 +14,7 @@
     max-width: 70%;
     h3 {
       font-size: $subtitle-font-size;
+      font-weight: normal;
       color: #ffffff;
       margin-bottom: 20px;
     }
