--- a/components/ui/BookingWidget/StepSubmit.module.scss
+++ b/components/ui/BookingWidget/StepSubmit.module.scss
@@ -59,10 +59,16 @@
     font-size: 1rem;
     outline: none;
     transition: all 0.2s ease;
-
+    font-family: 'Montserrat', sans-serif;
+   
     &:focus {
       border-color: #4f46e5;
       box-shadow: 0 0 0 3px #2564eb27;
+    }
+
+    &::placeholder {
+      font-family: 'Montserrat', sans-serif;
+  color: rgba(0, 0, 0, 0.4);
     }
   }
 
@@ -73,6 +79,16 @@
 
   .stepSubmit__backButton {
     @include mix.btnPrimaryBlueTransparent;
+  }
+
+  &__buttons {
+    display: flex;
+    justify-content: flex-end;
+    gap: 1rem;
+    @media screen and (max-width: 420px) {
+      flex-direction: column;
+      gap: 0.5rem;
+    }
   }
 
   &__button {
